syntax = "proto3";

message PersonMessage {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string company_name = 4;
}

message Empty {
}

message ID {
  int64 id = 1;
}

message Paged {
  int64 start = 1;
  int64 amount = 2;
}

message PersonMessageList {
  repeated PersonMessage persons = 1;
}

message PagedPersonMessageList {
  int32 page = 1;
  int32 pages = 2;
  repeated PersonMessage persons = 3;
}

service PersonService {
    rpc GetAll(Empty) returns (PersonMessageList);
    rpc GetById(ID) returns (PersonMessage);
    rpc GetPaged(Paged) returns (PagedPersonMessageList);
}
